--- a/Unity.layout.latte
+++ b/Unity.layout.latte
@@ -41,7 +41,7 @@ immutability=1
 plugin=org.kde.plasma.kickerdash
 
 [Containments][1][Applets][68][Configuration]
-PreloadWeight=22
+PreloadWeight=19
 
 [Containments][1][Applets][68][Configuration][ConfigDialog]
 DialogHeight=480
@@ -160,7 +160,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][12][Applets][63][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 
 [Containments][12][Applets][63][Configuration][Appearance]
 boldText=true
@@ -218,78 +218,6 @@ splitterPosition2=3
 titleTooltips=true
 zoomLevel=0
 
-[Containments][13]
-activityId=
-dockWindowBehavior=true
-formfactor=2
-immutability=1
-lastScreen=11
-location=3
-onPrimary=false
-plugin=org.kde.latte.containment
-raiseOnActivityChange=false
-raiseOnDesktopChange=false
-timerHide=700
-timerShow=200
-visibility=0
-wallpaperplugin=org.kde.image
-
-[Containments][13][Applets][41]
-immutability=1
-plugin=org.kde.activeWindowControl
-
-[Containments][13][Applets][41][Configuration]
-PreloadWeight=0
-
-[Containments][13][Applets][41][Configuration][Appearance]
-buttonOrder=close|minimize|maximize|alldesktops
-buttonSize=0.9
-buttonsStandalone=true
-buttonsVerticalCenter=true
-controlButtonsSpacing=0
-horizontalScreenWidthPercent=0.15
-noWindowIcon=kde-logo
-showButtonOnlyWhenMaximized=true
-showMaximize=true
-showMinimize=true
-slidingIconAndText=true
-widthFineTuning=0.5
-
-[Containments][13][Applets][41][Configuration][ConfigDialog]
-DialogHeight=1126
-DialogWidth=2048
-
-[Containments][13][Applets][42]
-immutability=1
-plugin=org.kde.plasma.appmenu
-
-[Containments][13][Applets][42][Configuration]
-PreloadWeight=0
-
-[Containments][13][ConfigDialog]
-DialogHeight=561
-DialogWidth=450
-
-[Containments][13][Configuration]
-PreloadWeight=0
-
-[Containments][13][General]
-advanced=true
-appletOrder=41;42
-disablePanelShadowForMaximized=true
-durationTime=None
-iconSize=26
-panelPosition=10
-panelSize=100
-shadowColor=ececec
-shadowOpacity=10
-shadowSize=5
-shrinkThickMargins=true
-splitterPosition=2
-splitterPosition2=3
-titleTooltips=true
-zoomLevel=0
-
 [Containments][14]
 activityId=
 formfactor=2
@@ -318,21 +246,25 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][14][Applets][76][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][14][Applets][77]
 immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][14][Applets][77][Configuration]
-PreloadWeight=0
+PreloadWeight=80
+
+[Containments][14][Applets][77][Configuration][ConfigDialog]
+DialogHeight=480
+DialogWidth=640
 
 [Containments][14][Applets][82]
 immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][14][Applets][82][Configuration]
-PreloadWeight=94
+PreloadWeight=100
 
 [Containments][14][Applets][82][Configuration][ConfigDialog]
 DialogHeight=480
@@ -343,7 +275,7 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][14][Applets][83][Configuration]
-PreloadWeight=34
+PreloadWeight=51
 
 [Containments][14][Applets][84]
 immutability=1
@@ -364,14 +296,14 @@ immutability=1
 plugin=org.kde.plasma.bluetooth
 
 [Containments][14][Applets][86][Configuration]
-PreloadWeight=5
+PreloadWeight=15
 
 [Containments][14][Applets][87]
 immutability=1
 plugin=org.kde.plasma.mediacontroller
 
 [Containments][14][Applets][87][Configuration]
-PreloadWeight=18
+PreloadWeight=34
 
 [Containments][14][ConfigDialog]
 DialogHeight=480
@@ -381,6 +313,224 @@ DialogWidth=640
 PreloadWeight=0
 
 [Containments][14][General]
+extraItems=org.kde.plasma.networkmanagement,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier
+knownItems=org.kde.plasma.networkmanagement,org.kde.ktp-contactlist,org.kde.plasma.clipboard,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier,org.kde.plasma.vault
+shownItems=ibus-ui-gtk3,dropbox-client-12978,ownCloud,org.kde.plasma.networkmanagement
+
+[Containments][15]
+activityId=
+dockWindowBehavior=true
+formfactor=2
+immutability=1
+lastScreen=11
+location=3
+onPrimary=false
+plugin=org.kde.latte.containment
+raiseOnActivityChange=false
+raiseOnDesktopChange=false
+timerHide=1500
+timerShow=500
+visibility=0
+wallpaperplugin=org.kde.image
+
+[Containments][15][Applets][40]
+immutability=1
+plugin=org.kde.plasma.systemtray
+
+[Containments][15][Applets][40][Configuration]
+PreloadWeight=100
+SystrayContainmentId=16
+
+[Containments][15][Applets][43]
+immutability=1
+plugin=org.kde.activeWindowControl
+
+[Containments][15][Applets][43][Configuration]
+PreloadWeight=0
+
+[Containments][15][Applets][43][Configuration][AppMenu]
+appmenuBoldTitleWhenMenuDisplayed=true
+appmenuFillHeight=true
+appmenuNextToButtons=true
+appmenuNextToIconAndText=true
+
+[Containments][15][Applets][43][Configuration][Appearance]
+boldFontWeight=true
+buttonOrder=close|minimize|maximize|alldesktops
+buttonSize=0.9
+buttonsStandalone=true
+buttonsVerticalCenter=true
+controlButtonsSpacing=0
+horizontalScreenWidthPercent=0.15
+noWindowIcon=kde-logo
+showButtonOnlyWhenMaximized=true
+showMaximize=true
+showMinimize=true
+slidingIconAndText=true
+widthFineTuning=0.5
+
+[Containments][15][Applets][43][Configuration][ConfigDialog]
+DialogHeight=491
+DialogWidth=851
+
+[Containments][15][Applets][44]
+immutability=1
+plugin=org.kde.plasma.appmenu
+
+[Containments][15][Applets][44][Configuration]
+PreloadWeight=0
+
+[Containments][15][Applets][45]
+immutability=1
+plugin=org.kde.plasma.digitalclock
+
+[Containments][15][Applets][45][Configuration]
+PreloadWeight=0
+
+[Containments][15][Applets][45][Configuration][Appearance]
+boldText=true
+enabledCalendarPlugins=/usr/lib/x86_64-linux-gnu/qt5/plugins/plasmacalendarplugins/pimevents.so
+showDate=true
+showWeekNumbers=true
+use24hFormat=2
+
+[Containments][15][Applets][45][Configuration][ConfigDialog]
+DialogHeight=480
+DialogWidth=640
+
+[Containments][15][Applets][46]
+immutability=1
+plugin=org.kde.plasma.lock_logout
+
+[Containments][15][Applets][46][Configuration]
+PreloadWeight=0
+
+[Containments][15][Applets][46][Configuration][ConfigDialog]
+DialogHeight=480
+DialogWidth=640
+
+[Containments][15][Applets][46][Configuration][General]
+show_lockScreen=false
+
+[Containments][15][ConfigDialog]
+DialogHeight=561
+DialogWidth=450
+
+[Containments][15][Configuration]
+PreloadWeight=0
+
+[Containments][15][General]
+advanced=true
+appletOrder=43;44;40;45;46
+disablePanelShadowForMaximized=true
+durationTime=None
+iconSize=26
+panelPosition=10
+panelSize=100
+shadowColor=ececec
+shadowOpacity=10
+shadowSize=5
+shrinkThickMargins=true
+splitterPosition=2
+splitterPosition2=3
+titleTooltips=true
+zoomLevel=0
+
+[Containments][16]
+activityId=
+formfactor=2
+immutability=1
+lastScreen=11
+location=3
+plugin=org.kde.plasma.private.systemtray
+wallpaperplugin=org.kde.image
+
+[Containments][16][Applets][47]
+immutability=1
+plugin=org.kde.plasma.battery
+
+[Containments][16][Applets][47][Configuration]
+PreloadWeight=45
+
+[Containments][16][Applets][47][Configuration][ConfigDialog]
+DialogHeight=480
+DialogWidth=640
+
+[Containments][16][Applets][48]
+immutability=1
+plugin=org.kde.plasma.printmanager
+
+[Containments][16][Applets][48][Configuration]
+PreloadWeight=0
+
+[Containments][16][Applets][49]
+immutability=1
+plugin=org.kde.plasma.notifications
+
+[Containments][16][Applets][49][Configuration]
+PreloadWeight=0
+
+[Containments][16][Applets][50]
+immutability=1
+plugin=org.kde.kdeconnect
+
+[Containments][16][Applets][50][Configuration]
+PreloadWeight=0
+
+[Containments][16][Applets][51]
+immutability=1
+plugin=org.kde.plasma.networkmanagement
+
+[Containments][16][Applets][51][Configuration]
+PreloadWeight=0
+
+[Containments][16][Applets][52]
+immutability=1
+plugin=org.kde.plasma.devicenotifier
+
+[Containments][16][Applets][52][Configuration]
+PreloadWeight=51
+
+[Containments][16][Applets][53]
+immutability=1
+plugin=org.kde.plasma.volume
+
+[Containments][16][Applets][53][Configuration]
+PreloadWeight=86
+
+[Containments][16][Applets][53][Configuration][ConfigDialog]
+DialogHeight=480
+DialogWidth=640
+
+[Containments][16][Applets][54]
+immutability=1
+plugin=org.kde.discovernotifier
+
+[Containments][16][Applets][54][Configuration]
+PreloadWeight=0
+
+[Containments][16][Applets][55]
+immutability=1
+plugin=org.kde.plasma.bluetooth
+
+[Containments][16][Applets][55][Configuration]
+PreloadWeight=5
+
+[Containments][16][Applets][88]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][16][Applets][88][Configuration]
+PreloadWeight=34
+
+[Containments][16][ConfigDialog]
+DialogHeight=480
+DialogWidth=640
+
+[Containments][16][Configuration]
+PreloadWeight=0
+
+[Containments][16][General]
 extraItems=org.kde.plasma.networkmanagement,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier
 knownItems=org.kde.plasma.networkmanagement,org.kde.ktp-contactlist,org.kde.plasma.clipboard,org.kde.plasma.printmanager,org.kde.kdeconnect,org.kde.plasma.pkupdates,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.discovernotifier,org.kde.plasma.vault
 shownItems=ibus-ui-gtk3,dropbox-client-12978,ownCloud,org.kde.plasma.networkmanagement
